# adk-ui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
.playwright-mcp/: page-2026-04-17T15-49-38-861Z.yml  page-2026-04-17T15-50-17-222Z.yml  page-2026-04-25T03-06-07-943Z.yml  page-2026-04-25T03-06-28-349Z.yml  page-2026-04-25T03-07-18-103Z.yml  page-2026-04-25T03-41-10-268Z.yml  page-2026-04-25T03-41-20-105Z.yml  page-2026-04-25T03-41-56-647Z.yml  page-2026-04-25T03-51-20-762Z.yml  page-2026-04-25T03-51-29-924Z.yml  page-2026-04-25T03-51-54-238Z.yml  page-2026-04-25T03-55-39-178Z.yml  page-2026-04-25T04-05-41-130Z.yml  page-2026-04-25T04-05-50-442Z.yml
awp-types/: Cargo.toml
awp-types/src/: lib.rs
catalog/: common_types.json  default_catalog.json  extended_catalog.json  metadata.json
docs/: FRAMEWORK_CONTINUITY_ROADMAP.md  PROTOCOL_MIGRATION.md  PROTOCOL_MODERNIZATION_WORKPLAN.md
examples/ui_react_client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-converter.js  tsconfig.app.json  vite.config.ts
examples/ui_server/: main.rs
src/: awp_compat.rs  catalog_registry.rs  compat.rs  html.rs  lib.rs  prompts.rs  protocol_capabilities.rs  schema.rs  templates.rs  toolset.rs  validation.rs
src/a2ui/: bindings.rs  components.rs  data_model.rs  encoding.rs  events.rs  ids.rs  messages.rs  mod.rs  prompts.rs  validator.rs
src/interop/: adapter.rs  ag_ui.rs  awp.rs  mcp_apps.rs  (+2 more)
tests/: a2ui_compat_tests.rs  catalog_tests.rs  legacy_tool_protocol_tests.rs  protocol_schema_tests.rs  tool_protocol_matrix_tests.rs
(+37 files in other folders)
